--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.12.13 <3.0.0"
 
 dependencies:
   flutter:
@@ -33,6 +33,7 @@ dependencies:
   fl_chart: ^0.36.0         #图表控件
 #  worker_manager: ^4.1.1    #线程管理
   video_player: ^2.1.6          #视频播放器
+  chewie: ^1.2.2      #video_player的封装
   url_launcher: ^6.0.8  #打开url
   flutter_weather_bg_null_safety: ^1.0.0 #天气动态背景
 flutter:
